# robotics-edu-jazzy-ionic

./: README.md
install/: local_setup.sh  setup.sh
install/1_4_repeat/share/1_4_repeat/: package.bash  package.zsh
install/day1/lib/day1/: publisher_node
install/day1/share/day1/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/day2/include/day2/day2/action/: map_area.h  map_area.hpp  navigate.h  pick_and_place.h
install/day2/include/day2/day2/action/detail/: charge_battery__builder.hpp  charge_battery__description.c  charge_battery__functions.c  charge_battery__functions.h  charge_battery__rosidl_typesupport_introspection_c.h  charge_battery__rosidl_typesupport_introspection_cpp.hpp  charge_battery__struct.h  charge_battery__type_support.c  charge_battery__type_support.cpp  map_area__builder.hpp  map_area__functions.c  map_area__functions.h  map_area__rosidl_typesupport_fastrtps_cpp.hpp  map_area__rosidl_typesupport_introspection_c.h  map_area__struct.h  map_area__type_support.c  map_area__type_support.hpp  navigate__builder.hpp  navigate__functions.c  navigate__rosidl_typesupport_introspection_c.h  navigate__struct.h  navigate__struct.hpp  navigate__traits.hpp  navigate__type_support.c  navigate__type_support.cpp  navigate__type_support.h  pick_and_place__builder.hpp  pick_and_place__functions.c  pick_and_place__functions.h  pick_and_place__rosidl_typesupport_fastrtps_c.h  pick_and_place__rosidl_typesupport_fastrtps_cpp.hpp  pick_and_place__struct.hpp  pick_and_place__traits.hpp  pick_and_place__type_support.hpp
install/day2/include/day2/day2/msg/: motor_status.h  motor_status.hpp  robot_array.hpp  robot_status.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  sensor_data.h
install/day2/include/day2/day2/msg/detail/: motor_status__functions.c  motor_status__functions.h  motor_status__rosidl_typesupport_fastrtps_cpp.hpp  (+23 more)
install/day2/include/day2/day2/srv/: calculate_path.h  calculate_path.hpp  emergency_stop.h  emergency_stop.hpp
install/day2/share/ament_index/resource_index/rosidl_interfaces/: day2
install/day2/share/day2/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/day2/share/day2/action/: ChargeBattery.idl  MapArea.idl  Navigate.action  PickAndPlace.action  PickAndPlace.idl
install/day2/share/day2/cmake/: ament_cmake_export_include_directories-extras.cmake  day2Config.cmake  day2__rosidl_typesupport_cExport-noconfig.cmake  day2__rosidl_typesupport_cExport.cmake  day2__rosidl_typesupport_cppExport-noconfig.cmake  day2__rosidl_typesupport_cppExport.cmake  day2__rosidl_typesupport_introspection_cExport-noconfig.cmake  day2__rosidl_typesupport_introspection_cExport.cmake  day2__rosidl_typesupport_introspection_cppExport.cmake  export_day2__rosidl_generator_cppExport.cmake  export_day2__rosidl_generator_pyExport-noconfig.cmake  export_day2__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_day2__rosidl_typesupport_fastrtps_cExport.cmake  export_day2__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_day2__rosidl_typesupport_fastrtps_cppExport.cmake
install/day2/share/day2/msg/: SensorData.json
install/day2/share/day2/srv/: CalculatePath.json  EmergencyStop.idl  EmergencyStop.json  GetRobotStatus.idl
install/day2_2/lib/day2_2/: navigate_action_client  navigate_action_server  robot_command_client_node  robot_command_server_node  robot_publisher_node  sensor_simulator_node
install/day2_2/share/ament_index/resource_index/package_run_dependencies/: day2_2
install/day2_2/share/day2_2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/repeat_1_4/include/repeat_1_4/repeat_1_4/action/: go_to_point.hpp
install/repeat_1_4/include/repeat_1_4/repeat_1_4/msg/: position.h  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_introspection_c__visibility_control.h
install/repeat_1_4/include/repeat_1_4/repeat_1_4/srv/: move_robot.h  move_robot.hpp
install/repeat_1_4/lib/repeat_1_4/: goto_action_client  goto_action_server  move_service_client  move_service_server  position_publisher
install/repeat_1_4/share/ament_index/resource_index/package_run_dependencies/: repeat_1_4
install/repeat_1_4/share/ament_index/resource_index/rosidl_interfaces/: repeat_1_4
install/repeat_1_4/share/repeat_1_4/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/repeat_1_4/share/repeat_1_4/action/: GoToPoint.idl
install/repeat_1_4/share/repeat_1_4/cmake/: ament_cmake_export_libraries-extras.cmake  export_repeat_1_4__rosidl_generator_cExport-noconfig.cmake  export_repeat_1_4__rosidl_generator_cppExport.cmake  export_repeat_1_4__rosidl_typesupport_fastrtps_cExport.cmake  export_repeat_1_4__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  repeat_1_4Config.cmake  repeat_1_4__rosidl_typesupport_cppExport-noconfig.cmake  repeat_1_4__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake
install/repeat_1_4/share/repeat_1_4/launch/: repeat_1_4.launch.py
log/: latest_build
src/day1/: CMakeLists.txt
src/day1/src/: publisher.cpp  subscriber.cpp
src/day2/: CMakeLists.txt
src/day2/msg/: MotorStatus.msg
src/day2/srv/: CalculatePath.srv
src/day2_2/: CMakeLists.txt
src/day2_2/launch/: day2_2.launch.py  day2_3.launch.py
src/day2_2/src/: filtering_subscriber.cpp  message_analyzer.cpp  navigate_action_client.cpp  navigate_action_server.cpp  performance_test.cpp  robot_command_client.cpp  robot_command_server.cpp  robot_publisher.cpp  robot_status_service.cpp  robot_subscriber.cpp  sensor_simulator.cpp
src/repeat_1_4/: CMakeLists.txt  package.xml
src/repeat_1_4/src/: goto_action_client.cpp  goto_action_server.cpp  move_service_client.cpp  move_service_server.cpp  position_publisher.cpp  position_subscriber.cpp
src/repeat_1_4/srv/: MoveRobot.srv
(+52 files in other folders)
