<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>day2_2</name>
  <version>1.0.0</version>
  <description>Advanced robot applications using custom messages</description>
  
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>              <!-- ROS2 C++ library -->
  <depend>std_msgs</depend>            <!-- Standard messages -->
  <depend>geometry_msgs</depend>       <!-- Geometry messages -->
  <depend>day2</depend>                <!-- Custom message paketimiz -->
  <depend>rclcpp_action</depend>       <!-- ROS2 Action library -->


  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>